--- a/public/fonts/nunito/style.css
+++ b/public/fonts/nunito/style.css
@@ -3,18 +3,18 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 200;
-    src: url('../fonts/nunito-v25-latin-200.eot');
+    src: url('./nunito-v25-latin-200.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-200.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-200.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-200.woff2') format('woff2'),
+        url('./nunito-v25-latin-200.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-200.woff') format('woff'),
+        url('./nunito-v25-latin-200.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-200.ttf') format('truetype'),
+        url('./nunito-v25-latin-200.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-200.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-200.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -23,18 +23,18 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 300;
-    src: url('../fonts/nunito-v25-latin-300.eot');
+    src: url('./nunito-v25-latin-300.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-300.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-300.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-300.woff2') format('woff2'),
+        url('./nunito-v25-latin-300.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-300.woff') format('woff'),
+        url('./nunito-v25-latin-300.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-300.ttf') format('truetype'),
+        url('./nunito-v25-latin-300.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-300.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-300.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -43,18 +43,18 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/nunito-v25-latin-regular.eot');
+    src: url('./nunito-v25-latin-regular.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-regular.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-regular.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-regular.woff2') format('woff2'),
+        url('./nunito-v25-latin-regular.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-regular.woff') format('woff'),
+        url('./nunito-v25-latin-regular.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-regular.ttf') format('truetype'),
+        url('./nunito-v25-latin-regular.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-regular.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-regular.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -63,18 +63,18 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 500;
-    src: url('../fonts/nunito-v25-latin-500.eot');
+    src: url('./nunito-v25-latin-500.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-500.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-500.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-500.woff2') format('woff2'),
+        url('./nunito-v25-latin-500.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-500.woff') format('woff'),
+        url('./nunito-v25-latin-500.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-500.ttf') format('truetype'),
+        url('./nunito-v25-latin-500.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-500.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-500.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -83,18 +83,18 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 700;
-    src: url('../fonts/nunito-v25-latin-700.eot');
+    src: url('./nunito-v25-latin-700.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-700.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-700.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-700.woff2') format('woff2'),
+        url('./nunito-v25-latin-700.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-700.woff') format('woff'),
+        url('./nunito-v25-latin-700.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-700.ttf') format('truetype'),
+        url('./nunito-v25-latin-700.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-700.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-700.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -103,18 +103,18 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/nunito-v25-latin-600.eot');
+    src: url('./nunito-v25-latin-600.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-600.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-600.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-600.woff2') format('woff2'),
+        url('./nunito-v25-latin-600.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-600.woff') format('woff'),
+        url('./nunito-v25-latin-600.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-600.ttf') format('truetype'),
+        url('./nunito-v25-latin-600.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-600.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-600.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -123,18 +123,18 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 800;
-    src: url('../fonts/nunito-v25-latin-800.eot');
+    src: url('./nunito-v25-latin-800.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-800.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-800.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-800.woff2') format('woff2'),
+        url('./nunito-v25-latin-800.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-800.woff') format('woff'),
+        url('./nunito-v25-latin-800.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-800.ttf') format('truetype'),
+        url('./nunito-v25-latin-800.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-800.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-800.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -143,18 +143,18 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 900;
-    src: url('../fonts/nunito-v25-latin-900.eot');
+    src: url('./nunito-v25-latin-900.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-900.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-900.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-900.woff2') format('woff2'),
+        url('./nunito-v25-latin-900.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-900.woff') format('woff'),
+        url('./nunito-v25-latin-900.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-900.ttf') format('truetype'),
+        url('./nunito-v25-latin-900.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-900.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-900.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -163,18 +163,18 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 200;
-    src: url('../fonts/nunito-v25-latin-200italic.eot');
+    src: url('./nunito-v25-latin-200italic.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-200italic.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-200italic.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-200italic.woff2') format('woff2'),
+        url('./nunito-v25-latin-200italic.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-200italic.woff') format('woff'),
+        url('./nunito-v25-latin-200italic.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-200italic.ttf') format('truetype'),
+        url('./nunito-v25-latin-200italic.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-200italic.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-200italic.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -183,18 +183,18 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 300;
-    src: url('../fonts/nunito-v25-latin-300italic.eot');
+    src: url('./nunito-v25-latin-300italic.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-300italic.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-300italic.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-300italic.woff2') format('woff2'),
+        url('./nunito-v25-latin-300italic.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-300italic.woff') format('woff'),
+        url('./nunito-v25-latin-300italic.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-300italic.ttf') format('truetype'),
+        url('./nunito-v25-latin-300italic.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-300italic.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-300italic.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -203,18 +203,18 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 400;
-    src: url('../fonts/nunito-v25-latin-italic.eot');
+    src: url('./nunito-v25-latin-italic.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-italic.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-italic.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-italic.woff2') format('woff2'),
+        url('./nunito-v25-latin-italic.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-italic.woff') format('woff'),
+        url('./nunito-v25-latin-italic.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-italic.ttf') format('truetype'),
+        url('./nunito-v25-latin-italic.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-italic.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-italic.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -223,18 +223,18 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 500;
-    src: url('../fonts/nunito-v25-latin-500italic.eot');
+    src: url('./nunito-v25-latin-500italic.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-500italic.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-500italic.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-500italic.woff2') format('woff2'),
+        url('./nunito-v25-latin-500italic.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-500italic.woff') format('woff'),
+        url('./nunito-v25-latin-500italic.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-500italic.ttf') format('truetype'),
+        url('./nunito-v25-latin-500italic.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-500italic.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-500italic.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -243,18 +243,18 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 600;
-    src: url('../fonts/nunito-v25-latin-600italic.eot');
+    src: url('./nunito-v25-latin-600italic.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-600italic.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-600italic.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-600italic.woff2') format('woff2'),
+        url('./nunito-v25-latin-600italic.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-600italic.woff') format('woff'),
+        url('./nunito-v25-latin-600italic.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-600italic.ttf') format('truetype'),
+        url('./nunito-v25-latin-600italic.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-600italic.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-600italic.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -263,18 +263,18 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 800;
-    src: url('../fonts/nunito-v25-latin-800italic.eot');
+    src: url('./nunito-v25-latin-800italic.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-800italic.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-800italic.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-800italic.woff2') format('woff2'),
+        url('./nunito-v25-latin-800italic.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-800italic.woff') format('woff'),
+        url('./nunito-v25-latin-800italic.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-800italic.ttf') format('truetype'),
+        url('./nunito-v25-latin-800italic.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-800italic.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-800italic.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -283,18 +283,18 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 700;
-    src: url('../fonts/nunito-v25-latin-700italic.eot');
+    src: url('./nunito-v25-latin-700italic.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-700italic.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-700italic.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-700italic.woff2') format('woff2'),
+        url('./nunito-v25-latin-700italic.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-700italic.woff') format('woff'),
+        url('./nunito-v25-latin-700italic.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-700italic.ttf') format('truetype'),
+        url('./nunito-v25-latin-700italic.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-700italic.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-700italic.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
 
@@ -303,17 +303,17 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 900;
-    src: url('../fonts/nunito-v25-latin-900italic.eot');
+    src: url('./nunito-v25-latin-900italic.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../fonts/nunito-v25-latin-900italic.eot?#iefix') format('embedded-opentype'),
+        url('./nunito-v25-latin-900italic.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/nunito-v25-latin-900italic.woff2') format('woff2'),
+        url('./nunito-v25-latin-900italic.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/nunito-v25-latin-900italic.woff') format('woff'),
+        url('./nunito-v25-latin-900italic.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/nunito-v25-latin-900italic.ttf') format('truetype'),
+        url('./nunito-v25-latin-900italic.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/nunito-v25-latin-900italic.svg#Nunito') format('svg');
+        url('./nunito-v25-latin-900italic.svg#Nunito') format('svg');
     /* Legacy iOS */
 }
